Stylesheet/emote/tag updates 2018-10-02

--- a/source-css/hugemotes.css
+++ b/source-css/hugemotes.css
@@ -95,6 +95,18 @@ a[href|="/appleparentshug"], a[href|="/armorcadancehug"], a[href|="/discordmanes
 a[href|="/cmcgabbyhug"], a[href|="/daringdashsmughug"], a[href|="/flurrytwikiss"], a[href|="/glimmybearhug"], a[href|="/spikethoraxhug"], a[href|="/twiembersaucy"], a[href|="/vaporstingerhug"], a[href|="/frittersweetiehug"]
 {background-image:url(%%misfits3b%%);display:block;float:left;}
 
+/* Misfits 4 b */
+a[href|="/chaaaaaaarge"], a[href|="/cmcponies"], a[href|="/maudbriar"], a[href|="/maudbriarpluspinkie"], a[href|="/pinkiehavingimpurethoughtsaboutayovidophone"], a[href|="/shhbbyisok"], a[href|="/silvergallushug"], a[href|="/silvergallusnohugs"], a[href|="/silvermarhug"], a[href|="/spikeemberhug"], a[href|="/starshimmerimply"]
+{background-image:url(%%misfits4b%%);display:block;float:left;}
+
+/* Misfits 5 b */
+a[href|="/stormkingfriendship"], a[href|="/sugarmac"], a[href|="/sugarmaccuddle"], a[href|="/sunlestiahug"], a[href|="/sunlightblush"], a[href|="/sunlightimply"], a[href|="/thedoctorswife"], a[href|="/triplethreathug"], a[href|="/trixlightsing"], a[href|="/trixlightswing"], a[href|="/twipinkiepanic"]
+{background-image:url(%%misfits5b%%);display:block;float:left;}
+
+/* Misfits 6 b */
+a[href|="/silvergallus"]
+{background-image:url(%%misfits6b%%);display:block;float:left;}
+
 /* Animated Emotes */
 a[href|="/zilean"] {background-image: url(%%Zilean%%);width:345px;height:250px;display:block;float:left;}
 
@@ -175,3 +187,26 @@ a[href|="/glimmybearhug"] {width:150px;height:150px;background-position: -256px 
 a[href|="/spikethoraxhug"] {width:110px;height:181px;background-position: -441px 0px;}
 a[href|="/twiembersaucy"] {width:210px;height:150px;background-position: 0px -317px;}
 a[href|="/vaporstingerhug"] {width:200px;height:130px;background-position: -210px -317px;}
+a[href|="/chaaaaaaarge"] {width:140px;height:160px;background-position: 0px 0px;}
+a[href|="/cmcponies"] {width:160px;height:200px;background-position: -140px 0px;}
+a[href|="/maudbriar"] {width:130px;height:130px;background-position: -300px 0px;}
+a[href|="/maudbriarpluspinkie"] {width:130px;height:130px;background-position: -300px -130px;}
+a[href|="/pinkiehavingimpurethoughtsaboutayovidophone"] {width:170px;height:140px;background-position: 0px -260px;}
+a[href|="/shhbbyisok"] {width:120px;height:120px;background-position: -170px -260px;}
+a[href|="/silvergallushug"] {width:180px;height:140px;background-position: -290px -260px;}
+a[href|="/silvergallusnohugs"] {width:180px;height:140px;background-position: -430px 0px;}
+a[href|="/silvermarhug"] {width:150px;height:150px;background-position: -470px -140px;}
+a[href|="/spikeemberhug"] {width:115px;height:130px;background-position: -470px -290px;}
+a[href|="/starshimmerimply"] {width:170px;height:100px;background-position: 0px -420px;}
+a[href|="/stormkingfriendship"] {width:210px;height:130px;background-position: 0px 0px;}
+a[href|="/sugarmac"] {width:100px;height:150px;background-position: -210px 0px;}
+a[href|="/sugarmaccuddle"] {width:200px;height:120px;background-position: -310px 0px;}
+a[href|="/sunlestiahug"] {width:140px;height:140px;background-position: -310px -120px;}
+a[href|="/sunlightblush"] {width:200px;height:100px;background-position: 0px -260px;}
+a[href|="/sunlightimply"] {width:170px;height:140px;background-position: -200px -260px;}
+a[href|="/thedoctorswife"] {width:175px;height:200px;background-position: -510px 0px;}
+a[href|="/triplethreathug"] {width:150px;height:165px;background-position: -450px -200px;}
+a[href|="/trixlightsing"] {width:150px;height:100px;background-position: 0px -365px;}
+a[href|="/trixlightswing"] {width:100px;height:140px;background-position: -370px -365px;}
+a[href|="/twipinkiepanic"] {width:230px;height:190px;background-position: 0px -505px;}
+a[href|="/silvergallus"] {width:180px;height:140px;background-position: 0px 0px;}
