--- a/source-css/rosequisition.css
+++ b/source-css/rosequisition.css
@@ -25,3 +25,13 @@ a[href|="/rosecatsit"] { background-image: url(%%emotes1%%); background-position
 a[href|="/h3"] { background-image: url(%%emotes1%%); background-position: -230px -690px; width: 104px; height: 173px; }
 a[href|="/comewithme"] { background-image: url(%%emotes1%%); background-position: -250px -475px; width: 150px; height: 162px; }
 a[href|="/sketchyrose"] { background-image: url(%%emotes1%%); background-position: -397px -475px; width: 149px; height: 169px;}
+
+{display: inline-block; background-image: url(%%emotes2%%)!important;cursor:default}
+a[href|="/rosecat"] { background-image: url(%%emotes2%%); background-position: -0px -0px; width: 319px; height: 153px;}
+a[href|="/headscarfrose"] { background-image: url(%%emotes2%%); background-position: -316px -0px; width: 115px; height: 147px;}
+a[href|="/headscarflily"] { background-image: url(%%emotes2%%); background-position: -439px -0px; width: 118px; height: 147px;}
+a[href|="/headscarfdaisy"] { background-image: url(%%emotes2%%); background-position: -300px -150px; width: 130px; height: 143px;}
+a[href|="/headscarfderpy"] { background-image: url(%%emotes2%%); background-position: -436px -150px; width: 130px; height: 143px;}
+a[href|="/lilyhappy"] { background-image: url(%%emotes2%%); background-position: -560px -0px; width: 188px; height: 230px;}
+a[href|="/roselily"] { background-image: url(%%emotes2%%); background-position: -549px -240px; width: 196px; height: 196px;}
+a[href|="/roseconcern"] { background-image: url(%%emotes2%%); background-position: -410px -293px; width: 136px; height: 155px;}
