--- a/source-css/twistarlight.css
+++ b/source-css/twistarlight.css
@@ -222,3 +222,117 @@ a[href|="/twistarpersonalspace"]{
   height:110px;
 
 }
+
+a[href="/snowfallboast"], a[href="/snowfallcheer"], a[href="/snowfallcute"], a[href="/snowfalldaw"], a[href="/snowfalldevious"], a[href="/snowfalldoomedusall"]{
+
+  display:block;
+
+  clear:none;
+
+  float:left;
+
+  background-image:url(%%twistarmotes04%%);
+
+}
+
+a[href|="/snowfallboast"]{
+
+  background-position:-0px -0px;
+
+  width:120px;
+
+  height:110px;
+
+}
+
+a[href|="/snowfallcheer"]{
+
+  background-position:-0px -110px;
+
+  width:120px;
+
+  height:110px;
+
+}
+
+a[href|="/snowfallcute"]{
+
+  background-position:-0px -220px;
+
+  width:120px;
+
+  height:110px;
+
+}
+
+a[href|="/snowfalldaw"]{
+
+  background-position:-0px -330px;
+
+  width:120px;
+
+  height:110px;
+
+}
+
+a[href|="/snowfalldevious"]{
+
+  background-position:-0px -440px;
+
+  width:120px;
+
+  height:110px;
+
+}
+
+a[href|="/snowfalldoomedusall"]{
+
+  background-position:-0px -550px;
+
+  width:120px;
+
+  height:110px;
+
+}
+
+a[href="/twistarmythbusters"], a[href="/twistarreading"], a[href="/twistartableshaveturned"]{
+
+  display:block;
+
+  clear:none;
+
+  float:left;
+
+  background-image:url(%%twistarmotes05%%);
+
+}
+
+a[href|="/twistarmythbusters"]{
+
+  background-position:-0px -0px;
+
+  width:120px;
+
+  height:110px;
+
+}
+
+a[href|="/twistarreading"]{
+
+  background-position:-0px -110px;
+
+  width:120px;
+
+  height:110px;
+
+}
+
+a[href|="/twistartableshaveturned"]{
+
+  background-position:-0px -220px;
+
+  width:120px;
+
+  height:110px;
+
+}
