--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -451,7 +451,7 @@ a[href|="/trixcookie"], a[href|="/spitfirejudge"], a[href|="/marblescared"], a[h
 {background-image:url(%%70x70c%%);width:70px;height:70px;display:block;float:left;}
 
 /* 70x70d 'motes */
-a[href|="/cocoscared"], a[href|="/rdwuthoof"], a[href|="/sunsetwhat"], a[href|="/sunsetregret"], a[href|="/whatsthat"], a[href|="/cadancechat"], a[href|="/winkyjack"], a[href|="/ponkcern"], a[href|="/sg:I"], a[href|="/imeanisee"], a[href|="/shutterbug"]
+a[href|="/cocoscared"], a[href|="/rdwuthoof"], a[href|="/sunsetwhat"], a[href|="/sunsetregret"], a[href|="/whatsthat"], a[href|="/cadancechat"], a[href|="/winkyjack"], a[href|="/ponkcern"], a[href|="/sg:I"], a[href|="/imeanisee"], a[href|="/shutterbug"], a[href|="/cozyglownotevil"], a[href|="/cosyglownotevil"], a[href|="/cozyplease"], a[href|="/cosyplease"]
 {background-image:url(%%70x70d%%);width:70px;height:70px;display:block;float:left}
 
 /* 100x100a 'motes. */
@@ -495,7 +495,7 @@ a[href|="/boopening"], a[href|="/agentt"], a[href|="/hoodiedash"], a[href|="/shy
 {background-image:url(%%150x150e%%);width:150px;height:150px;display:block;float:left;}
 
 /* 150x150f 'motes */
-a[href|="/twitation"], a[href|="/yourexistenceannoysme"], a[href|="/apfle"], a[href|="/derpystop"], a[href|="/abstop"], a[href|="/octilewd"], a[href|="/fingerguns"], a[href|="/thatswhereyourewrongkiddo"], a[href|="/twiyoudontsay"], a[href|="/thatslewd"], a[href|="/twiapathy"], a[href|="/cheerileecanteven"], a[href|="/adagiothisidiot"], a[href|="/ddwhatsup"], a[href|="/twinani"]
+a[href|="/twitation"], a[href|="/yourexistenceannoysme"], a[href|="/apfle"], a[href|="/derpystop"], a[href|="/abstop"], a[href|="/octilewd"], a[href|="/fingerguns"], a[href|="/thatswhereyourewrongkiddo"], a[href|="/twiyoudontsay"], a[href|="/thatslewd"], a[href|="/twiapathy"], a[href|="/cheerileecanteven"], a[href|="/adagiothisidiot"], a[href|="/ddwhatsup"], a[href|="/twinani"], a[href|="/loss"]
 {background-image:url(%%150x150f%%);width:150px;height:150px;display:block;float:left;}
 
 /* 200x200a 'motes. */
@@ -580,8 +580,12 @@ a[href|="/celestiawat"], a[href|="/hellodarkness"], a[href|="/discordross"], a[h
 {background-image:url(%%misfitsp%%);display:block;float:left;}
 
 /* Misfits q */
-a[href|="/abapproved"], a[href|="/sbapproved"], a[href|="/scootapproved"], a[href|="/abwave"], a[href|="/celobey"], a[href|="/spikehighfive"], a[href|="/splat"], a[href|="/canttouchthis"], a[href="/rdyoudoin"], a[href|="/nolewdzone"], a[href|="/annoyedlyra"], a[href|="/lyrathink"], a[href|="/trixiecallsbs"], a[href|="/icallbs"], a[href|="/lyrapeace"], a[href|="/karmahugskarma"], a[href|="/sunsetnotsure"], a[href|="/cinderpointypony"], a[href|="/hugtime"], a[href|="/lewdzone"], a[href|="/sitlestia"]
+a[href|="/abapproved"], a[href|="/sbapproved"], a[href|="/scootapproved"], a[href|="/abwave"], a[href|="/celobey"], a[href|="/spikehighfive"], a[href|="/splat"], a[href|="/canttouchthis"], a[href="/rdyoudoin"], a[href|="/nolewdzone"], a[href|="/annoyedlyra"], a[href|="/lyrathink"], a[href|="/trixiecallsbs"], a[href|="/icallbs"], a[href|="/lyrapeace"], a[href|="/karmahugskarma"], a[href|="/sunsetnotsure"], a[href|="/cinderpointypony"], a[href|="/hugtime"], a[href|="/lewdzone"], a[href|="/sitlestia"], a[href|="/nerdcolgate"], a[href|="/nerdminuette"], a[href|="/peepingpie"]
 {background-image:url(%%misfitsq%%);display:block;float:left;}
+
+/* Misfits r */
+a[href|="/cheerleaderrarity"], a[href|="/cheerleadershy"], a[href|="/cheerleadertwi"], a[href|="/cheerleadersunset"], a[href|="/cheerleaderaj"], a[href|="/cheerleaderpinkie"], a[href|="/cheerleaderdash"], a[href|="/oof"], a[href|="/paprikaoof"], a[href|="/pinkieandchill"]
+{background-image:url(%%misfitsr%%);display:block;float:left;}
 
 /*
   ------
@@ -628,7 +632,7 @@ a[href|="/whatatwist"],  a[href|="/hnng"], a[href|="/smugcolgate"], a[href|="/rd
 {background-position: 0% -300%;}
 
 /* Grid pos 1,3 'motes */
-a[href|="/rdsquishyface"], a[href|="/soveryawesome"], a[href|="/trixielecture"], a[href|="/nerdderpy"], a[href|="/lunanurse"], a[href|="/maudxrock"], a[href|="/thisisbait"], a[href|="/flufflepirate"], a[href|="/karmalook"], a[href|="/riptreebrary"], a[href|="/ripgoldenoaks"], a[href|="/daringjoy"], a[href|="/lyramad"], a[href|="/nervoustrixie"], a[href|="/youkickedthepuppy"], a[href|="/whatismylife"], a[href|="/cheerileecanteven"], a[href|="/humantrixienotamused"], a[href|="/chryslewd"]
+a[href|="/rdsquishyface"], a[href|="/soveryawesome"], a[href|="/trixielecture"], a[href|="/nerdderpy"], a[href|="/lunanurse"], a[href|="/maudxrock"], a[href|="/thisisbait"], a[href|="/flufflepirate"], a[href|="/karmalook"], a[href|="/riptreebrary"], a[href|="/ripgoldenoaks"], a[href|="/daringjoy"], a[href|="/lyramad"], a[href|="/nervoustrixie"], a[href|="/youkickedthepuppy"], a[href|="/whatismylife"], a[href|="/cheerileecanteven"], a[href|="/humantrixienotamused"], a[href|="/chryslewd"], a[href|="/cozyglownotevil"], a[href|="/cosyglownotevil"]
 {background-position: -100% -300%;}
 
 /* Grid pos 2,3 'motes */
@@ -636,7 +640,7 @@ a[href|="/rdsmirk"], a[href|="/cheekydash"], a[href|="/ajdur"], a[href|="/cocoha
 {background-position: -200% -300%;}
 
 /* Grid pos 0,4 'motes */
-a[href|="/sombrarage"], a[href|="/sadshy"], a[href|="/cocosad"], a[href|="/nerdpinkamena"], a[href|="/raracheeks"], a[href|="/nothisisbait"], a[href|="/twipie"], a[href|="/discentiaangrysquint"], a[href|="/tgaptsundere"], a[href|="/mint"], a[href|="/ssshy"], a[href|="/ponk"], a[href|="/ddwhatsup"], a[href|="/humantrixieright"], a[href|="/benice"]
+a[href|="/sombrarage"], a[href|="/sadshy"], a[href|="/cocosad"], a[href|="/nerdpinkamena"], a[href|="/raracheeks"], a[href|="/nothisisbait"], a[href|="/twipie"], a[href|="/discentiaangrysquint"], a[href|="/tgaptsundere"], a[href|="/mint"], a[href|="/ssshy"], a[href|="/ponk"], a[href|="/ddwhatsup"], a[href|="/humantrixieright"], a[href|="/benice"], a[href|="/cozyplease"], a[href|="/cosyplease"]
 {background-position: 0 -400%;}
 
 /* Grid pos 1,4 'motes */
@@ -644,7 +648,7 @@ a[href|="/gildaconfused"], a[href|="/grimfluff"], a[href|="/nerdrarity"], a[href
 {background-position: -100% -400%;}
 
 /* Grid pos 2,4 'motes */
-a[href|="/rarityspy"], a[href|="/discoin"], a[href|="/ajduckface"], a[href|="/nerdshy"], a[href|="/lunaselfcest"], a[href|="/crazylestia"], a[href|="/cadgiggle"], a[href|="/colgatenews"], a[href|="/colgatenotimpressed"], a[href|="/applebat2"], a[href|="/communerd"], a[href|="/twidisappointed"], a[href|="/cadancegonnacutsomeone"], a[href|="/cadencegonnacutsomeone"], a[href|="/humantrixieupset"]
+a[href|="/rarityspy"], a[href|="/discoin"], a[href|="/ajduckface"], a[href|="/nerdshy"], a[href|="/lunaselfcest"], a[href|="/crazylestia"], a[href|="/cadgiggle"], a[href|="/colgatenews"], a[href|="/colgatenotimpressed"], a[href|="/applebat2"], a[href|="/communerd"], a[href|="/twidisappointed"], a[href|="/cadancegonnacutsomeone"], a[href|="/cadencegonnacutsomeone"], a[href|="/humantrixieupset"], a[href|="/loss"]
 {background-position: -200% -400%;}
 
 /* Grid pos 0,5 'motes */
@@ -1262,3 +1266,15 @@ a[href|="/cinderpointypony"] {width:83px;height:100px;background-position: -719p
 a[href|="/hugtime"] {width:181px;height:150px;background-position: -557px -120px}
 a[href|="/lewdzone"] {width:122px;height:150px;background-position: -738px -120px}
 a[href|="/sitlestia"] {width:200px;height:172px;background-position: -585px -270px}
+a[href|="/nerdcolgate"], a[href|="/nerdminuette"] {width:134px;height:150px;background-position: -860px -120px}
+a[href|="/peepingpie"] {width:57px;height:70px;background-position: -802px 0}
+a[href|="/cheerleaderrarity"], a[href|="/cheerleadershy"], a[href|="/cheerleadertwi"], a[href|="/cheerleadersunset"], a[href|="/cheerleaderaj"], a[href|="/cheerleaderpinkie"], a[href|="/cheerleaderdash"] {width:100px;height:160px}
+a[href|="/cheerleaderrarity"] {background-position: 0 -290px}
+a[href|="/cheerleadershy"] {background-position: -100px -290px}
+a[href|="/cheerleadertwi"] {background-position: -200px -290px}
+a[href|="/cheerleadersunset"] {background-position: -300px -290px}
+a[href|="/cheerleaderaj"] {background-position: -400px -290px}
+a[href|="/cheerleaderpinkie"] {background-position: -500px -290px}
+a[href|="/cheerleaderdash"] {background-position: -600px -290px}
+a[href|="/oof"], a[href|="/paprikaoof"] {width:83px;height:100px;background-position: 0 -70px}
+a[href|="/pinkieandchill"] {width:62px;height:100px;background-position: -83px -70px}
