--- a/source-css/sugarbelle.css
+++ b/source-css/sugarbelle.css
@@ -54,14 +54,14 @@ margin-bottom:0px;
 display:none;
 }
 .side .subscribers .number:after { 
-content:" bakers";
+content:" Bakers";
 }
 
 .side .users-online .word {
 display:none;
 }
 .side .users-online .number:after {
-content:" eating muffins";
+content:" in the bakery";
 }
 
 /*---table style---*/
